# esp32-weathernodes

./: .gitignore  CLAUDE.md  Cargo.toml  DOKU.md  LICENSE  README.md  build.rs  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
Arduino/: ESP32Weathernodes.ino  settings.h
src/: ap_mode.rs  config.rs  main.rs  network.rs  sensor.rs
